# g

./: .gitignore  AGENTS.md  CHAT_RULES.md  README.md  find_table.html  game.html  index.html  main.py  map_maker.html  model_editor.html  package-lock.json  package.json  progress.md  pyproject.toml  requirements.txt  server.js  style.css  test2.html  xxx.html
images/models/: suit.gltf  suit2.glb
images/pretty/: about.html  game-players.html  games.html.bak  games.html.bak.2026-01-12_051538  history.html  index.html  leaderboard.html  lite-games.html  pagecount.html  players.html  players.js  research-crazy.html  research-graphs.html  research-timeline.html  research-tree.html  rules.html  (+1 more)
maps/: outside1-heights.json  outside1.json
models/: body.glb  box2.glb  box3.glb  box4.glb  box5.glb  box6.glb  box7.glb  box8.glb  floor1.glb  manifest.json  pedestal.mtl  rocks.glb  storage-box.glb  table1.glb  table2.glb  wall.glb
pages/: login.html  register.html
public/: camera.js  client.js  config.js  index.html  style.css
scripts/: auth.js  currency.js  drone-state-storage.js  fps-meter.js  game.js  geo-visor-storage.js  manifest-placement-storage.js  map-maker-3d.js  map-maker.js  market-state-storage.js  missions.js  model-editor.js  outside-map.js  oxygen-state-storage.js  player-state-storage.js  pointer-lock-controls.js  scene.js  settings-storage.js  terrain-life-storage.js  todo-storage.js
src/: main.py
tests/: math.js  math.test.js  regression-checklist.md
tools/: generate-storage-box-glb.js
wz/: index.html  menu.html
xx/: index.html  lobby.json
(+109 files in other folders)
