[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starter-game"
version = "0.1.0"
description = "Basic Pygame window loop starter."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = []

[tool.setuptools.package-dir]
"" = "src"
